# pulumi-commandx

./: .editorconfig  .gitignore  .goreleaser.prerelease.yml  .goreleaser.yml  Makefile  README.md  go.work  go.work.sum
.github/: renovate.json
.github/actions/build-test-image/: action.yml
.github/scripts/: calculate-npm-tag.sh  tag-go-module.sh
.github/workflows/: build-test.yml  build.yml  dev-version.yml  main.yml  prerelease.yml  publish.yml  pull-request.yml  release.yml  weekly-pulumi-update.yml
examples/: Dockerfile  examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum  ssh_server.go
examples/simple-dotnet/: Program.cs  Pulumi.yaml
examples/simple-go/: Pulumi.yaml  go.mod  main.go
examples/simple-py/: Pulumi.yaml  __main__.py
examples/simple-ts/: Pulumi.yaml  index.ts  package.json
provider/scripts/: generate-provider-types.ts  package.json  tsconfig.json
schemagen/: go.mod  go.sum
sdk/: go.mod  go.sum
sdk/dotnet/: Provider.cs  UnMango.Commandx.csproj  Utilities.cs  pulumi-plugin.json
sdk/dotnet/Remote/: Chmod.cs  (+13 more)
sdk/java/: README.md  build.gradle  settings.gradle
sdk/nodejs/: index.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_commandx/: __init__.py  _utilities.py  provider.py
sdk/python/pulumi_commandx/remote/: __init__.py  _enums.py  _inputs.py  chmod.py  curl.py  etcdctl.py  hostnamectl.py  mkdir.py  mktemp.py  mv.py  outputs.py  rm.py  sed.py  systemctl.py  tar.py  tee.py  wget.py
(+160 files in other folders)
