[project]
  name = "pulumi_commandx"
  description = "A Pulumi component provider for creating statically typed `Command` resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.91.1,<4.0.0", "pulumi-command>=1.0.0,<1.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "command", "category/utility", "kind/component"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.1a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Repository = "https://github.com/UnstoppableMango/pulumi-commandx"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_commandx = ["py.typed", "pulumi-plugin.json"]
